; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_actctx.c_lookup_winsxs.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_actctx.c_lookup_winsxs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_14__ = type { i8* }
%struct.actctx_loader = type { i32 }
%struct.assembly_identity = type { i32, i32, i32 }
%struct.TYPE_11__ = type { i32, i32 }
%struct.TYPE_12__ = type { i32, i32*, i32*, %struct.TYPE_11__*, i32, i64 }
%struct.TYPE_13__ = type { i32 }

@lookup_winsxs.manifest_dirW = internal constant [18 x i8] c"\\winsxs\\manifests\00", align 16
@STATUS_NO_SUCH_FILE = common dso_local global i32 0, align 4
@SharedUserData = common dso_local global %struct.TYPE_14__* null, align 8
@STATUS_NO_MEMORY = common dso_local global i32 0, align 4
@OBJ_CASE_INSENSITIVE = common dso_local global i32 0, align 4
@GENERIC_READ = common dso_local global i32 0, align 4
@SYNCHRONIZE = common dso_local global i32 0, align 4
@FILE_SHARE_READ = common dso_local global i32 0, align 4
@FILE_SHARE_WRITE = common dso_local global i32 0, align 4
@FILE_DIRECTORY_FILE = common dso_local global i32 0, align 4
@FILE_SYNCHRONOUS_IO_NONALERT = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.actctx_loader*, %struct.assembly_identity*)* @lookup_winsxs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lookup_winsxs(%struct.actctx_loader* %0, %struct.assembly_identity* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.actctx_loader*, align 8
  %5 = alloca %struct.assembly_identity*, align 8
  %6 = alloca %struct.assembly_identity, align 4
  %7 = alloca %struct.TYPE_11__, align 4
  %8 = alloca %struct.TYPE_12__, align 8
  %9 = alloca %struct.TYPE_13__, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store %struct.actctx_loader* %0, %struct.actctx_loader** %4, align 8
  store %struct.assembly_identity* %1, %struct.assembly_identity** %5, align 8
  store i8* null, i8** %11, align 8
  %13 = load %struct.assembly_identity*, %struct.assembly_identity** %5, align 8
  %14 = getelementptr inbounds %struct.assembly_identity, %struct.assembly_identity* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %27

17:                                               ; preds = %2
  %18 = load %struct.assembly_identity*, %struct.assembly_identity** %5, align 8
  %19 = getelementptr inbounds %struct.assembly_identity, %struct.assembly_identity* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %17
  %23 = load %struct.assembly_identity*, %struct.assembly_identity** %5, align 8
  %24 = getelementptr inbounds %struct.assembly_identity, %struct.assembly_identity* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %29, label %27

27:                                               ; preds = %22, %17, %2
  %28 = load i32, i32* @STATUS_NO_SUCH_FILE, align 4
  store i32 %28, i32* %3, align 4
  br label %174

29:                                               ; preds = %22
  %30 = call i32 (...) @RtlGetProcessHeap()
  %31 = load %struct.TYPE_14__*, %struct.TYPE_14__** @SharedUserData, align 8
  %32 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %31, i32 0, i32 0
  %33 = load i8*, i8** %32, align 8
  %34 = call i32 @strlenW(i8* %33)
  %35 = add nsw i32 %34, 1
  %36 = sext i32 %35 to i64
  %37 = mul i64 %36, 1
  %38 = add i64 %37, 18
  %39 = trunc i64 %38 to i32
  %40 = call i8* @RtlAllocateHeap(i32 %30, i32 0, i32 %39)
  store i8* %40, i8** %10, align 8
  %41 = icmp ne i8* %40, null
  br i1 %41, label %44, label %42

42:                                               ; preds = %29
  %43 = load i32, i32* @STATUS_NO_MEMORY, align 4
  store i32 %43, i32* %3, align 4
  br label %174

44:                                               ; preds = %29
  %45 = load i8*, i8** %10, align 8
  %46 = load %struct.TYPE_14__*, %struct.TYPE_14__** @SharedUserData, align 8
  %47 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %46, i32 0, i32 0
  %48 = load i8*, i8** %47, align 8
  %49 = load %struct.TYPE_14__*, %struct.TYPE_14__** @SharedUserData, align 8
  %50 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %49, i32 0, i32 0
  %51 = load i8*, i8** %50, align 8
  %52 = call i32 @strlenW(i8* %51)
  %53 = sext i32 %52 to i64
  %54 = mul i64 %53, 1
  %55 = trunc i64 %54 to i32
  %56 = call i32 @memcpy(i8* %45, i8* %48, i32 %55)
  %57 = load i8*, i8** %10, align 8
  %58 = load %struct.TYPE_14__*, %struct.TYPE_14__** @SharedUserData, align 8
  %59 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %58, i32 0, i32 0
  %60 = load i8*, i8** %59, align 8
  %61 = call i32 @strlenW(i8* %60)
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds i8, i8* %57, i64 %62
  %64 = call i32 @memcpy(i8* %63, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @lookup_winsxs.manifest_dirW, i64 0, i64 0), i32 18)
  %65 = load i8*, i8** %10, align 8
  %66 = call i32 @RtlDosPathNameToNtPathName_U(i8* %65, %struct.TYPE_11__* %7, i32* null, i32* null)
  %67 = icmp ne i32 %66, 0
  br i1 %67, label %73, label %68

68:                                               ; preds = %44
  %69 = call i32 (...) @RtlGetProcessHeap()
  %70 = load i8*, i8** %10, align 8
  %71 = call i32 @RtlFreeHeap(i32 %69, i32 0, i8* %70)
  %72 = load i32, i32* @STATUS_NO_SUCH_FILE, align 4
  store i32 %72, i32* %3, align 4
  br label %174

73:                                               ; preds = %44
  %74 = call i32 (...) @RtlGetProcessHeap()
  %75 = load i8*, i8** %10, align 8
  %76 = call i32 @RtlFreeHeap(i32 %74, i32 0, i8* %75)
  %77 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %8, i32 0, i32 0
  store i32 48, i32* %77, align 8
  %78 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %8, i32 0, i32 5
  store i64 0, i64* %78, align 8
  %79 = load i32, i32* @OBJ_CASE_INSENSITIVE, align 4
  %80 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %8, i32 0, i32 4
  store i32 %79, i32* %80, align 8
  %81 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %8, i32 0, i32 3
  store %struct.TYPE_11__* %7, %struct.TYPE_11__** %81, align 8
  %82 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %8, i32 0, i32 2
  store i32* null, i32** %82, align 8
  %83 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %8, i32 0, i32 1
  store i32* null, i32** %83, align 8
  %84 = load i32, i32* @GENERIC_READ, align 4
  %85 = load i32, i32* @SYNCHRONIZE, align 4
  %86 = or i32 %84, %85
  %87 = load i32, i32* @FILE_SHARE_READ, align 4
  %88 = load i32, i32* @FILE_SHARE_WRITE, align 4
  %89 = or i32 %87, %88
  %90 = load i32, i32* @FILE_DIRECTORY_FILE, align 4
  %91 = load i32, i32* @FILE_SYNCHRONOUS_IO_NONALERT, align 4
  %92 = or i32 %90, %91
  %93 = call i32 @NtOpenFile(i32* %12, i32 %86, %struct.TYPE_12__* %8, %struct.TYPE_13__* %9, i32 %89, i32 %92)
  %94 = icmp ne i32 %93, 0
  br i1 %94, label %103, label %95

95:                                               ; preds = %73
  %96 = load %struct.assembly_identity*, %struct.assembly_identity** %5, align 8
  %97 = bitcast %struct.assembly_identity* %6 to i8*
  %98 = bitcast %struct.assembly_identity* %96 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %97, i8* align 4 %98, i64 12, i1 false)
  %99 = load i32, i32* %12, align 4
  %100 = call i8* @lookup_manifest_file(i32 %99, %struct.assembly_identity* %6)
  store i8* %100, i8** %11, align 8
  %101 = load i32, i32* %12, align 4
  %102 = call i32 @NtClose(i32 %101)
  br label %103

103:                                              ; preds = %95, %73
  %104 = load i8*, i8** %11, align 8
  %105 = icmp ne i8* %104, null
  br i1 %105, label %109, label %106

106:                                              ; preds = %103
  %107 = call i32 @RtlFreeUnicodeString(%struct.TYPE_11__* %7)
  %108 = load i32, i32* @STATUS_NO_SUCH_FILE, align 4
  store i32 %108, i32* %3, align 4
  br label %174

109:                                              ; preds = %103
  %110 = call i32 (...) @RtlGetProcessHeap()
  %111 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %7, i32 0, i32 1
  %112 = load i32, i32* %111, align 4
  %113 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %7, i32 0, i32 0
  %114 = load i32, i32* %113, align 4
  %115 = sext i32 %114 to i64
  %116 = load i8*, i8** %11, align 8
  %117 = call i32 @strlenW(i8* %116)
  %118 = add nsw i32 %117, 2
  %119 = sext i32 %118 to i64
  %120 = mul i64 %119, 1
  %121 = add i64 %115, %120
  %122 = trunc i64 %121 to i32
  %123 = call i8* @RtlReAllocateHeap(i32 %110, i32 0, i32 %112, i32 %122)
  store i8* %123, i8** %10, align 8
  %124 = icmp ne i8* %123, null
  br i1 %124, label %131, label %125

125:                                              ; preds = %109
  %126 = call i32 (...) @RtlGetProcessHeap()
  %127 = load i8*, i8** %11, align 8
  %128 = call i32 @RtlFreeHeap(i32 %126, i32 0, i8* %127)
  %129 = call i32 @RtlFreeUnicodeString(%struct.TYPE_11__* %7)
  %130 = load i32, i32* @STATUS_NO_MEMORY, align 4
  store i32 %130, i32* %3, align 4
  br label %174

131:                                              ; preds = %109
  %132 = load i8*, i8** %10, align 8
  %133 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %7, i32 0, i32 0
  %134 = load i32, i32* %133, align 4
  %135 = sext i32 %134 to i64
  %136 = udiv i64 %135, 1
  %137 = getelementptr inbounds i8, i8* %132, i64 %136
  store i8 92, i8* %137, align 1
  %138 = load i8*, i8** %10, align 8
  %139 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %7, i32 0, i32 0
  %140 = load i32, i32* %139, align 4
  %141 = sext i32 %140 to i64
  %142 = udiv i64 %141, 1
  %143 = getelementptr inbounds i8, i8* %138, i64 %142
  %144 = getelementptr inbounds i8, i8* %143, i64 1
  %145 = load i8*, i8** %11, align 8
  %146 = call i32 @strcpyW(i8* %144, i8* %145)
  %147 = load i8*, i8** %10, align 8
  %148 = call i32 @RtlInitUnicodeString(%struct.TYPE_11__* %7, i8* %147)
  %149 = load i8*, i8** %11, align 8
  %150 = call i64* @strrchrW(i8* %149, i8 signext 46)
  store i64 0, i64* %150, align 8
  %151 = call i32 @open_nt_file(i32* %12, %struct.TYPE_11__* %7)
  %152 = icmp ne i32 %151, 0
  br i1 %152, label %164, label %153

153:                                              ; preds = %131
  %154 = load %struct.actctx_loader*, %struct.actctx_loader** %4, align 8
  %155 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %7, i32 0, i32 1
  %156 = load i32, i32* %155, align 4
  %157 = load i8*, i8** %11, align 8
  %158 = load i32, i32* @TRUE, align 4
  %159 = load i32, i32* %12, align 4
  %160 = call i32 @get_manifest_in_manifest_file(%struct.actctx_loader* %154, %struct.assembly_identity* %6, i32 %156, i8* %157, i32 %158, i32 %159)
  %161 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %9, i32 0, i32 0
  store i32 %160, i32* %161, align 4
  %162 = load i32, i32* %12, align 4
  %163 = call i32 @NtClose(i32 %162)
  br label %167

164:                                              ; preds = %131
  %165 = load i32, i32* @STATUS_NO_SUCH_FILE, align 4
  %166 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %9, i32 0, i32 0
  store i32 %165, i32* %166, align 4
  br label %167

167:                                              ; preds = %164, %153
  %168 = call i32 (...) @RtlGetProcessHeap()
  %169 = load i8*, i8** %11, align 8
  %170 = call i32 @RtlFreeHeap(i32 %168, i32 0, i8* %169)
  %171 = call i32 @RtlFreeUnicodeString(%struct.TYPE_11__* %7)
  %172 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %9, i32 0, i32 0
  %173 = load i32, i32* %172, align 4
  store i32 %173, i32* %3, align 4
  br label %174

174:                                              ; preds = %167, %125, %106, %68, %42, %27
  %175 = load i32, i32* %3, align 4
  ret i32 %175
}

declare dso_local i8* @RtlAllocateHeap(i32, i32, i32) #1

declare dso_local i32 @RtlGetProcessHeap(...) #1

declare dso_local i32 @strlenW(i8*) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @RtlDosPathNameToNtPathName_U(i8*, %struct.TYPE_11__*, i32*, i32*) #1

declare dso_local i32 @RtlFreeHeap(i32, i32, i8*) #1

declare dso_local i32 @NtOpenFile(i32*, i32, %struct.TYPE_12__*, %struct.TYPE_13__*, i32, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i8* @lookup_manifest_file(i32, %struct.assembly_identity*) #1

declare dso_local i32 @NtClose(i32) #1

declare dso_local i32 @RtlFreeUnicodeString(%struct.TYPE_11__*) #1

declare dso_local i8* @RtlReAllocateHeap(i32, i32, i32, i32) #1

declare dso_local i32 @strcpyW(i8*, i8*) #1

declare dso_local i32 @RtlInitUnicodeString(%struct.TYPE_11__*, i8*) #1

declare dso_local i64* @strrchrW(i8*, i8 signext) #1

declare dso_local i32 @open_nt_file(i32*, %struct.TYPE_11__*) #1

declare dso_local i32 @get_manifest_in_manifest_file(%struct.actctx_loader*, %struct.assembly_identity*, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
